[project]
name = "fundus_data_toolkit"
version = "0.1.0"
description = "A simple interface for creating datamodules from publicly available fundus datasets"
dependencies = [
    "albumentations",
    "appdirs",
    "torch",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "lightning",
    "matplotlib",
    "nntools @ git+https://github.com/ClementPla/NNTools@attrs_dataset",
    "timm",
]
readme = "README.md"

[project.optional-dependencies]
notebook = ["ipykernel", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fix = true
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]

[tool.ruff.format]
docstring-code-format = true
